--- a/env/default/js.properties
+++ b/env/default/js.properties
@@ -1,11 +1,11 @@
 #js.properties
 #settings related to gauge-js.
 
-test_timeout = 20000
+test_timeout = 60000
 
 # Change this to true to enable debugging support
 DEBUG = false
 
 # Comma seperated list of dirs. path should be relative to project root.
-STEP_IMPL_DIR = tests
+STEP_IMPL_DIR = steps
 
