--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "amp-what-acceptance-test",
   "version": "0.0.2",
-  "license": "private",
+  "license": "UNLICENSED",
   "description": "Acceptance Tests for amp-what.com, written in Gauge",
   "scripts": {
     "test": "gauge run specs/*.md",
