--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "license": "UNLICENSED",
   "description": "Acceptance Tests for amp-what.com, written in Gauge",
   "scripts": {
+    "play": "yarn playwright test",
     "test": "gauge run -c2 specs/*.md",
     "test:staging": "HOST=amp-what-staging.herokuapp.com gauge run -c2 specs/*.md",
     "test:localhost": "HOST=localhost:5000 INSECURE=1 gauge run -c2   specs/*.md"
@@ -11,6 +12,7 @@
   "dependencies": {},
   "devDependencies": {
     "@getgauge/cli": "*",
+    "@playwright/test": "^1.21.1",
     "gauge": "*",
     "playwright": "^1.21.1",
     "taiko": "*"
