--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,13 @@
-# Gauge - metadata dir
+# JavaScript node dependencies
+node_modules
+/.vscode/
+
+# Gauge
 .gauge
-
-# Gauge - log files dir
 logs
-
-# Gauge - reports dir
 reports
 
-# Gauge - JavaScript node dependencies
-node_modules
+# Playwright
 test-results/
 playwright-report/
-/.vscode/
+
