--- a/package.json
+++ b/package.json
@@ -1,20 +1,22 @@
 {
   "name": "amp-what-acceptance-test",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "license": "UNLICENSED",
   "description": "Acceptance Tests for amp-what.com, written in Gauge",
   "scripts": {
     "play": "yarn playwright test",
+    "play:staging": "HOST=amp-what-staging.herokuapp.com yarn playwright test",
+    "play:local": "HOST=localhost:5000 INSECURE=1 yarn playwright test",
     "test": "gauge run -c2 specs/*.md",
-    "test:staging": "HOST=amp-what-staging.herokuapp.com gauge run -c2 specs/*.md",
+    "test:staging": "gauge run -c2 specs/*.md",
     "test:localhost": "HOST=localhost:5000 INSECURE=1 gauge run -c2   specs/*.md"
   },
   "dependencies": {},
   "devDependencies": {
     "@getgauge/cli": "*",
-    "@playwright/test": "^1.21.1",
+    "@playwright/test": "*",
     "gauge": "*",
-    "playwright": "^1.21.1",
+    "playwright": "*",
     "taiko": "*"
   }
 }
