yarn berry yarn.lock upgrade

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,12 @@ reports
 test-results/
 playwright-report/
 
+# Yarn berry
+# https://yarnpkg.com/getting-started/qa#which-files-should-be-gitignored
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
