--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "@playwright/test": "*",
-    "playwright": "*"
+    "playwright": "*",
+    "typescript": "*"
   }
 }
