--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -3,5 +3,7 @@ nodeLinker: pnp
 plugins:
   - path: .yarn/plugins/@yarnpkg/plugin-typescript.cjs
     spec: "@yarnpkg/plugin-typescript"
+  - path: .yarn/plugins/@yarnpkg/plugin-outdated.cjs
+    spec: "https://mskelton.dev/yarn-outdated/v2"
 
 yarnPath: .yarn/releases/yarn-berry.cjs
