--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "test:report": "yarn playwright show-report"
   },
   "devDependencies": {
-    "@playwright/test": "*",
+    "@playwright/test": "^1.29.2",
     "@types/es6-promise": "^3.3.0",
     "@types/node": "^18.11.18",
-    "playwright": "*",
+    "playwright": "^1.29.2",
     "typescript": "^4.9.4"
   }
 }
