add retries env variable

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "WORKERS=2 yarn playwright test",
     "test:staging": "WORKERS=3 HOST=amp-what-staging.herokuapp.com yarn playwright test",
-    "test:local": "WORKERS=4 HOST=localhost:5000 HTTPS=0 yarn playwright test",
+    "test:local": "WORKERS=4 RETRIES=0 HOST=localhost:5000 HTTPS=0 yarn playwright test",
     "test:report": "yarn playwright show-report"
   },
   "devDependencies": {
