--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
   "nodeVersion": "20.15",
   "npmVersion": "10.7.0",
   "devDependencies": {
-    "@playwright/test": "^1.39.0",
-    "@types/node": "^20.8.9",
-    "ts-envs": "*",
-    "typescript": "^5.5.2"
+    "@playwright/test": "^1.49.1",
+    "@types/node": "^22.10.2",
+    "ts-envs": "^1.3.6",
+    "typescript": "^5.7.2"
   },
-  "packageManager": "yarn@4.0.1"
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
